[package]
name = "gpu-datastore"
version = "0.1.0"
authors = ["Christoph Schulze <christoph.schulze@signavio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
ptx-builder = "0.5"
arrow = "2.0"

